[package]
name = "jarvis-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
users = "0.11.0"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
nix = "0.23.1"
local-ip-address = "0.4.4"
